--- a/devcontainers/janus/.devcontainer/devcontainer.json
+++ b/devcontainers/janus/.devcontainer/devcontainer.json
@@ -57,8 +57,8 @@
         "./local-features/devcontainers",
         "./local-features/shfmt"
     ],
-    "remoteUser": "vscode",
-    "containerUser": "vscode",
+    "remoteUser": "node",
+    "containerUser": "node",
     "postCreateCommand": "/bin/bash -c 'liquidprompt_activate'",
     "customizations": {
         "vscode": {
