fix: correct pyJanus name in release-please
This commit corrects the name of the pyJanus package (was a duplicate
of janusjs) and updates the rest of the package names for better
readability.

Fixes: #20
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -75,7 +75,7 @@
     "packages": {
         ".": {
             "release-type": "node",
-            "package-name": "janus",
+            "package-name": "Janus",
             "component": "janus"
         },
         ".devcontainer": {
@@ -85,6 +85,14 @@
             "extra-files": [
                 "devcontainer.json"
             ]
+        },
+        "packages/janus.js": {
+            "release-type": "node",
+            "package-name": "Janus.js"
+        },
+        "lib/pyjanus": {
+            "release-type": "python",
+            "package-name": "pyJanus"
         },
         "containers/janus": {
             "release-type": "simple",
@@ -98,14 +106,6 @@
             "extra-files": [
                 ".devcontainer/devcontainer.json"
             ]
-        },
-        "packages/janus.js": {
-            "release-type": "node",
-            "package-name": "janusjs"
-        },
-        "lib/pyjanus": {
-            "release-type": "python",
-            "package-name": "janusjs"
         }
     }
 }
