--- a/.github/actions/container/action.yml
+++ b/.github/actions/container/action.yml
@@ -38,10 +38,6 @@ inputs:
   password:
     description: 'OCI Registry Password'
     required: true
-  cleanup:
-    description: 'Cleanup images after build?'
-    required: true
-    default: true
 
 runs:
   using: "composite"
@@ -63,12 +59,6 @@ runs:
       id: git
       shell: bash
       run: echo "short_sha=$(git rev-parse --short ${{ github.sha }})" >> "$GITHUB_OUTPUT"
-
-    - name: Set container UUID
-      id: uuid
-      shell: bash
-      run: echo "uuid=$(uuidgen -s -n @url -N ${{ inputs.repository }}:${{ steps.git.outputs.short_sha }})" >> "$GITHUB_OUTPUT"
-
     # jscpd:ignore-end
 
     - name: Build container
@@ -81,59 +71,20 @@ runs:
         cache-from: type=registry,ref=${{ inputs.repository }}
         cache-to: type=inline
         context: ${{ inputs.context }}
-        outputs: type=docker,dest=${{ github.workspace }}/${{ steps.uuid.outputs.uuid }}.tar
+        push: ${{ inputs.push }}
+        tags: |
+          ${{ inputs.repository }}:latest
+          ${{ inputs.repository }}:${{ steps.git.outputs.short_sha }}
+          ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}.${{ inputs.semver_patch }}
+          ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}
+          ${{ inputs.repository }}:v${{ inputs.semver_major }}
         platforms: ${{ inputs.platforms }}
-        push: false
 
-    - name: Load container
-      id: load
-      if: ${{ inputs.push == 'true' }}
-      shell: bash
-      run: |
-        docker load -i ${{ github.workspace }}/${{ steps.uuid.outputs.uuid }}.tar
-        rm -f ${{ github.workspace }}/${{ steps.uuid.outputs.uuid }}.tar
-        docker inspect -f '{{index .RepoDigests 0}}' ${{ steps.build.outputs.imageid }}
-        echo "digest=$(docker inspect -f '{{index .RepoDigests 0}}' ${{ steps.build.outputs.imageid }} | cut -f2 -d@)" >> "$GITHUB_OUTPUT"
-
-    - name: Tag container
-      if: ${{ inputs.push == 'true' }}
-      shell: bash
-      run: |
-        docker tag ${{ steps.build.outputs.imageid }} ${{ inputs.repository }}:latest
-        docker tag ${{ steps.build.outputs.imageid }} ${{ inputs.repository }}:${{ steps.git.outputs.short_sha }}
-        docker tag ${{ steps.build.outputs.imageid }} ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}.${{ inputs.semver_patch }}
-        docker tag ${{ steps.build.outputs.imageid }} ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}
-        docker tag ${{ steps.build.outputs.imageid }} ${{ inputs.repository }}:v${{ inputs.semver_major }}
-
-    - name: Push container
-      if: ${{ inputs.push == 'true' }}
-      shell: bash
-      run: |
-        docker push ${{ inputs.repository }}:latest
-        docker push ${{ inputs.repository }}:${{ steps.git.outputs.short_sha }}
-        docker push ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}.${{ inputs.semver_patch }}
-        docker push ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}
-        docker push ${{ inputs.repository }}:v${{ inputs.semver_major }}
-
-    # jscpd:ignore-start
     - name: Attest
       uses: actions/attest-build-provenance@v1
       id: attest
-      if: ${{ inputs.push == 'true' }}
       with:
         subject-name: ${{ inputs.repository }}
-        subject-digest: ${{ steps.load.outputs.digest }}
-        push-to-registry: true
+        subject-digest: ${{ steps.build.outputs.digest }}
+        push-to-registry: ${{ inputs.push }}
     # jscpd:ignore-end
-
-    - name: Cleanup container build
-      if: ${{ inputs.cleanup == 'true' }}
-      shell: bash
-      run: |
-        docker image rm -f ${{ steps.build.outputs.imageid }} \
-          ${{ inputs.repository }}:latest \
-          ${{ inputs.repository }}:${{ steps.git.outputs.short_sha }} \
-          ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}.${{ inputs.semver_patch }} \
-          ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }} \
-          ${{ inputs.repository }}:v${{ inputs.semver_major }}
-        docker builder prune --all --force --verbose
