Revert "fix: container attestation fixes (#38)"
This reverts commit 92ca0e9d275d9a2712df79229e1a8e50a0c95274.

--- a/.github/actions/container/action.yml
+++ b/.github/actions/container/action.yml
@@ -87,18 +87,13 @@ runs:
 
     - name: Load container
       id: load
+      if: ${{ inputs.push == 'true' }}
       shell: bash
       run: |
         docker load -i ${{ github.workspace }}/${{ steps.uuid.outputs.uuid }}.tar
-        date
         rm -f ${{ github.workspace }}/${{ steps.uuid.outputs.uuid }}.tar
-        date
-        docker inspect -f '{{index .Id}}' ${{ steps.build.outputs.imageid }}
-        date
         docker inspect -f '{{index .RepoDigests 0}}' ${{ steps.build.outputs.imageid }}
-        date
         echo "digest=$(docker inspect -f '{{index .RepoDigests 0}}' ${{ steps.build.outputs.imageid }} | cut -f2 -d@)" >> "$GITHUB_OUTPUT"
-        date
 
     - name: Tag container
       if: ${{ inputs.push == 'true' }}
@@ -124,11 +119,11 @@ runs:
     - name: Attest
       uses: actions/attest-build-provenance@v1
       id: attest
-      if: ${{ inputs.push == 'false' }}
+      if: ${{ inputs.push == 'true' }}
       with:
         subject-name: ${{ inputs.repository }}
         subject-digest: ${{ steps.load.outputs.digest }}
-        push-to-registry: false
+        push-to-registry: true
     # jscpd:ignore-end
 
     - name: Cleanup container build
