feat: import release-trigger package
This commit imports the release-trigger package from the @jhatler
fork of Google's repo-automation-bots repository. It adds the package
as-is to the monorepo. It also adds a GitHub Actions workflow to
CI the package and integrates it with the monorepo's release process.

Refs: #48
URL: https://github.com/jhatler/repo-automation-bots
Commit: f3be771a2fe580ef2d7539989d21731810b2f1cc
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -4,5 +4,6 @@
   "containers/janus": "0.1.3",
   "devcontainers/janus": "0.1.3",
   "packages/janus.js": "0.1.0",
-  "lib/pyjanus": "0.1.0"
+  "lib/pyjanus": "0.1.0",
+  "packages/release-trigger": "1.0.0"
 }
