--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "janus",
   "private": true,
+  "license": "MIT",
+  "repository": "jhatler/janus",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "devDependencies": {
-    "lerna": "^8.1.3"
+    "lerna": "^8.1.3",
+    "c8": "^7.1.0"
   },
   "workspaces": [
     "packages/*"
