--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -3,8 +3,9 @@ GITHUB_ACTIONS_CONFIG_FILE=.github/actionlint.yml
 GIT_DISCOVERY_ACROSS_FILESYSTEM=true
 IGNORE_GENERATED_FILES=true
 IGNORE_GITIGNORED_FILES=true
-LINTER_RULES_PATH=.
 JAVASCRIPT_ES_CONFIG_FILE=.eslintrc.json
+LINTER_RULES_PATH=.
 TYPESCRIPT_STANDARD_TSCONFIG_FILE=tsconfig.eslint.json
 VALIDATE_ALL_CODEBASE=true
 VALIDATE_GITHUB_ACTIONS=false
+VALIDATE_TYPESCRIPT_STANDARD=false
