--- a/packages/release-trigger/.eslintrc.json
+++ b/packages/release-trigger/.eslintrc.json
@@ -1,4 +1,15 @@
 {
   "extends": "./node_modules/gts",
-  "root": true
+  "root": true,
+  "rules": {
+    "node/no-extraneous-import": [
+      "error",
+      {
+        "allowModules": [
+          "probot",
+          "@octokit/rest"
+        ]
+      }
+    ]
+  }
 }
