--- a/packages/release-trigger/Dockerfile.frontend
+++ b/packages/release-trigger/Dockerfile.frontend
@@ -12,6 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# checkov:skip=CKV_DOCKER_3:Handled by devcontainer
+# checkov:skip=CKV_DOCKER_2:Not applicable
+
 # Use a multi-stage docker build to limit production dependencies.
 
 # Use the official lightweight Node.js 14 image.
