--- a/.github/workflows/release-trigger-ci.yml
+++ b/.github/workflows/release-trigger-ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node
-        uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
+        uses: actions/setup-node@v4
         with:
           node-version: 14
           cache: 'npm'
@@ -52,7 +52,8 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v4
 
-      - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 14
           cache: 'npm'
