fix: update release-trigger release name
It is now compatible with Git tag names.

Fixes: #62
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -95,7 +95,7 @@
         },
         "packages/release-trigger": {
             "release-type": "node",
-            "package-name": "release-trigger (Janus Fork)"
+            "package-name": "release-trigger"
         },
         "lib/pyjanus": {
             "release-type": "python",
