--- a/release-please-config.json
+++ b/release-please-config.json
@@ -46,7 +46,7 @@
         {
             "type": "chore",
             "section": "Miscellaneous Chores",
-            "hidden": true
+            "hidden": false
         },
         {
             "type": "refactor",
