--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -55,7 +55,7 @@ jobs:
         uses: ./.github/actions/container
         with:
           context: "{{defaultContext}}:containers/janus"
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           repository: ghcr.io/jhatler/janus
           registry: ghcr.io
@@ -105,7 +105,7 @@ jobs:
         uses: ./.github/actions/devcontainer
         with:
           workspace: ${{ github.workspace }}/devcontainers/janus
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           repository: ghcr.io/jhatler/janus-devcontainer
           registry: ghcr.io
