--- a/.github/actions/container/action.yml
+++ b/.github/actions/container/action.yml
@@ -38,12 +38,20 @@ inputs:
   password:
     description: 'OCI Registry Password'
     required: true
+  sign:
+    description: 'Sign images?'
+    required: false
+    default: false
 
 runs:
   using: "composite"
   steps:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
+
+    - name: Install cosign
+      if: inputs.sign != 'false'
+      uses: sigstore/cosign-installer@v3.5.0
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -79,6 +87,19 @@ runs:
           ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}
           ${{ inputs.repository }}:v${{ inputs.semver_major }}
         platforms: ${{ inputs.platforms }}
+
+    - name: Sign the published images
+      if: inputs.sign == 'true' && inputs.push == 'true'
+      shell: bash
+      env:
+        TAGS: |
+          ${{ inputs.repository }}:latest
+          ${{ inputs.repository }}:${{ steps.git.outputs.short_sha }}
+          ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}.${{ inputs.semver_patch }}
+          ${{ inputs.repository }}:v${{ inputs.semver_major }}.${{ inputs.semver_minor }}
+          ${{ inputs.repository }}:v${{ inputs.semver_major }}
+        DIGEST: ${{ steps.build.outputs.digest }}
+      run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
     - name: Attest
       uses: actions/attest-build-provenance@v1
