--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -36,6 +36,7 @@ jobs:
           context: "{{defaultContext}}:containers/janus"
           platforms: linux/amd64
           push: true
+          sign: true
           repository: ghcr.io/jhatler/janus
           registry: ghcr.io
           username: ${{ github.repository_owner }}
@@ -53,6 +54,7 @@ jobs:
           workspace: ${{ github.workspace }}/devcontainers/janus
           platforms: linux/amd64
           push: true
+          sign: true
           repository: ghcr.io/jhatler/janus-devcontainer
           registry: ghcr.io
           username: ${{ github.repository_owner }}
