--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -3,6 +3,8 @@ name: tfsec
 on:
   push:
     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   schedule:
     - cron: '27 21 * * 6'
 
