chore: update release-trigger packages
This was done by running `npm upgrade` in the node:14-bullseye image
after upgrading npm to 9.9.3. The @octokit/core package was pinned to
the 4.x version due to errors encountered when it was unpinned. It may
be able to be upgraded further, but that was not tested.

Refs: #122
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/packages/release-trigger/package.json
+++ b/packages/release-trigger/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@google-automations/bot-config-utils": "^6.1.0",
     "@google-automations/datastore-lock": "^4.0.0",
+    "@octokit/core": "^4.1.0",
     "gcf-utils": "^14.2.1",
     "jsonwebtoken": "^9.0.0"
   },
