--- a/packages/release-trigger/package.json
+++ b/packages/release-trigger/package.json
@@ -23,16 +23,17 @@
     "start-frontend": "node ./build/src/server-frontend.js",
     "start:local": "node ./build/src/local.js",
     "pretest": "npm run compile",
-    "test": "cross-env LOG_LEVEL=fatal c8 mocha --exit build/test",
+    "test": "cross-env LOG_LEVEL=fatal c8 mocha --node-option no-experimental-fetch --exit build/test",
     "fix": "gts fix",
     "lint": "gts check"
   },
   "dependencies": {
-    "@google-automations/bot-config-utils": "^6.1.0",
-    "@google-automations/datastore-lock": "^4.0.0",
-    "@octokit/core": "^4.1.0",
-    "gcf-utils": "^14.2.1",
-    "jsonwebtoken": "^9.0.0"
+    "@google-automations/bot-config-utils": "^7.0.0",
+    "@google-automations/datastore-lock": "^5.0.0",
+    "@google-automations/issue-utils": "^3.0.0",
+    "@octokit/core": "^4.2.4",
+    "gcf-utils": "^15.0.1",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.0",
@@ -49,6 +50,6 @@
     "typescript": "~4.9.0"
   },
   "engines": {
-    "node": ">= 14"
+    "node": ">= 18"
   }
 }
