--- a/packages/release-trigger/.eslintrc.json
+++ b/packages/release-trigger/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./node_modules/gts",
+  "extends": "../../node_modules/gts",
   "root": true,
   "rules": {
     "node/no-extraneous-import": [
