--- a/.github/workflows/release-trigger-ci.yml
+++ b/.github/workflows/release-trigger-ci.yml
@@ -10,7 +10,7 @@ concurrency:
 permissions: {}
 
 jobs:
-  build:
+  test:
     name: Build release-trigger
     runs-on: ubuntu-latest
     permissions:
@@ -23,51 +23,22 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 14
+          node-version: 22
           cache: 'npm'
 
-      - name: Cache Dependencies
+      - name: Cache Node Dependencies
         uses: actions/cache@v4
         id: cache-deps
         with:
           path: |
             node_modules
             packages/release-trigger/node_modules
-          key: ${{ runner.os }}-npm-v3-${{ hashFiles('package-lock.json,packages/release-trigger/package-lock.json') }}
+          key: ${{ runner.os }}-npm-v4-${{ hashFiles('package-lock.json') }}
 
-      - name: Install release-trigger Dependencies
+      - name: Install Node Dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         shell: bash
-        run: |
-          sudo npm install -g npm@9.9.3
-          rm -f package-lock.json package.json
-          cd packages/release-trigger
-          npm install
-
-  test:
-    name: Test & Lint release-trigger
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: read
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 14
-          cache: 'npm'
-
-      - name: Cache Dependencies
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            packages/release-trigger/node_modules
-          key: ${{ runner.os }}-npm-v3-${{ hashFiles('package-lock.json,packages/release-trigger/package-lock.json') }}
+        run: npm ci
 
       - name: Run Tests
         run: npm test
