--- a/packages/release-trigger/Dockerfile.frontend
+++ b/packages/release-trigger/Dockerfile.frontend
@@ -19,7 +19,7 @@
 
 # Use the official lightweight Node.js 14 image.
 # https://hub.docker.com/_/node
-FROM node:18-slim AS BUILD
+FROM node:22-bookworm as BUILD
 
 WORKDIR /home/node
 
@@ -36,7 +36,7 @@ COPY . ./
 
 RUN npm run compile
 
-FROM node:18-slim
+FROM node:22-bookworm
 
 WORKDIR /home/node
 
