--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@typescript-eslint/parser": "<6.16.0",
     "eslint": "<9.0.0",
     "eslint-plugin-jsonc": "<2.16.0",
-    "prettier": "<3.2.0"
+    "prettier": "<3.2.0",
+    "typescript": "<5.2.0"
   },
   "workspaces": [
     "packages/*"
