chore(deps): update dependency typescript to ^5.3.0

--- a/packages/janus.js/package.json
+++ b/packages/janus.js/package.json
@@ -20,6 +20,6 @@
   "dependencies": {},
   "devDependencies": {
     "@types/node": "^20.12.12",
-    "typescript": "<5.2.0"
+    "typescript": "^5.3.0"
   }
 }
