--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "<9.0.0",
     "eslint-plugin-jsonc": "<2.16.0",
     "prettier": "<3.2.0",
-    "typescript": "<5.2.0"
+    "typescript": "^5.3.0"
   },
   "workspaces": [
     "packages/*"
