chore: whitespace change to trigger build
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/containers/janus/Dockerfile
+++ b/containers/janus/Dockerfile
@@ -38,9 +38,5 @@ RUN wget --version \
  && npm --version \
  && tsc --version
 
-# Create testing timestamp
-RUN date -u +'%Y-%m-%dT%H:%M:%SZ' > /.build-date
-
 # Final stage
-FROM build as final
-COPY --from=testing /.build-date /.build-date
+FROM testing as final
