--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json",
-    "image": "ghcr.io/jhatler/janus-devcontainer:v0", /* x-release-please-version */
+    "image": "ghcr.io/jhatler/janus-devcontainer:v0.2", /* x-release-please-version */
     "remoteUser": "node",
     "containerUser": "node",
-    "postCreateCommand": "docker pull ghcr.io/super-linter/super-linter:v6.5.1"
+    "postCreateCommand": ""
 }
