feat: Update dependabot and tfsec integrations
This adds release-trigger and the new terraform source code to the
tfsec workflow and dependabot configuration.

Fixes: #184
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,10 @@ updates:
     directory: "/containers/janus/"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "docker"
+    directory: "/packages/release-trigger/"
+    schedule:
+      interval: "weekly"
   - package-ecosystem: "devcontainers"
     directory: "/devcontainers/janus/"
     schedule:
@@ -14,5 +18,13 @@ updates:
       interval: "weekly"
   - package-ecosystem: "pip"
     directory: "/lib/pyjanus/"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "terraform"
+    directory: "/terraform/control/"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "terraform"
+    directory: "/terraform/stacks/hello-world/"
     schedule:
       interval: "weekly"
