feat: add CHANGELOG/README/Tests to github_oidc
This adds a test case to the github_oidc module to ensure that it works
prior to releasing new versions. It also makes the following changes:

- Cleans up the rest of the hello_world module (#307)
- Updates the tfsec and dependabot configs (#300)
- Add CHANGELOG.md to github_oidc module (empty)
- Add README.md to github_oidc module (usage + references)

Fixes: #293, #307
Refs: #300
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,10 +25,14 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "terraform"
-    directory: "/terraform/stacks/hello_world/"
+    directory: "/terraform/stacks/network/"
     schedule:
       interval: "weekly"
   - package-ecosystem: "terraform"
-    directory: "/terraform/stacks/network/"
+    directory: "/terraform/stacks/admin/"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "terraform"
+    directory: "/terraform/modules/github_oidc/"
     schedule:
       interval: "weekly"
