--- a/.github/super-linter.env
+++ b/.github/super-linter.env
@@ -1,4 +1,4 @@
-DEFAULT_BRANCH=main
+DEFAULT_BRANCH=origin/main
 GITHUB_ACTIONS_CONFIG_FILE=.github/actionlint.yml
 GIT_DISCOVERY_ACROSS_FILESYSTEM=true
 IGNORE_GENERATED_FILES=true
