chore: move janus devcontainer to container root
This move the janus devcontainer so it resides with the janus container.

It also temporarily disables the container workflow so that this and
upcoming changes can be made without triggering runs doomed to fail.

Fixes: #390
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -1,17 +1,18 @@
 ---
 name: Containers PR
 on:
-  pull_request:
-    paths:
-      - 'containers/janus/**'
-      - '!containers/janus/CHANGELOG.md'
-      - 'devcontainers/janus/**'
-      - '!devcontainers/janus/CHANGELOG.md'
-      - '.devcontainer/**'
-      - '!.devcontainer/CHANGELOG.md'
-      - '.github/workflows/containers.yml'
-      - '.github/actions/container/**'
-      - '.github/actions/devcontainer/**'
+  workflow_dispatch:
+  # pull_request:
+  #   paths:
+  #     - 'containers/janus/**'
+  #     - '!containers/janus/CHANGELOG.md'
+  #     - 'devcontainers/janus/**'
+  #     - '!devcontainers/janus/CHANGELOG.md'
+  #     - '.devcontainer/**'
+  #     - '!.devcontainer/CHANGELOG.md'
+  #     - '.github/workflows/containers.yml'
+  #     - '.github/actions/container/**'
+  #     - '.github/actions/devcontainer/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
