feat: bootstrap Janus.js testing
This commit adds the necessary files to bootstrap testing for the
Janus.js library. The tests only validate the library's Hello class and
are written using the `mocha` framework.

Refs: #171
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/package.json
+++ b/package.json
@@ -23,5 +23,16 @@
     "packages/*"
   ],
   "version": "0.1.5",
-  "scripts": {}
+  "scripts": {},
+  "mocha": {
+    "loader": [
+      "ts-node/esm"
+    ],
+    "recursive": true,
+    "extension": [
+      "ts",
+      "js",
+      "tsx"
+    ]
+  }
 }
