--- a/packages/release-trigger/.eslintrc.json
+++ b/packages/release-trigger/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": "../../node_modules/gts",
   "root": true,
   "rules": {
-    "node/no-extraneous-import": [
+    "n/no-extraneous-import": [
       "error",
       {
         "allowModules": [
